--- a/src/assets/scss/base/_fonts.scss
+++ b/src/assets/scss/base/_fonts.scss
@@ -7,6 +7,13 @@
 
 @font-face {
   font-family: "Montserrat";
+  src: url("../fonts/Montserrat/static/Montserrat-SemiBold.ttf");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Montserrat";
   src: url("../fonts/Montserrat/static/Montserrat-Bold.ttf");
   font-weight: 700;
   font-style: normal;
