--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -10,7 +10,7 @@
   &__nav {
     display: flex;
     gap: 1rem;
-    font-size: var(--small-text);
+    font-size: var(--small-text-size);
     font-family: OpenSans, sans-serif;
 
     &__item {
